[tool.poetry]
name = "llama-summary"
version = "0.1.0"
description = "Use your locally running llama instance to summarize your changes in commit messages"
authors = ["Mike Pickfield <mpickfield@getresq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
